# swig-eigen-numpy

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md  install_eigen.sh  pull_subs.sh  push_subs.sh
cmake/: DrakeUseSWIG.cmake  SwigPython.cmake
python/: CMakeLists.txt  autodiff.i  autodiff_wrapper.i  inverter_wrapper.i  pyinverter_demo.ipynb  taylor.py  test_ad.ipynb  test_ad.py  test_inverter.py  test_wrapped_autodiff.py
python/pyinverter/: .gitignore  __init__.py  extensions.py  pyinverter.py
src/: CMakeLists.txt  inverter.cpp  inverter.hpp  square.hpp  test_inverter.cpp
swig/: eigen.i
swigfiles/: swigPython.cmake
swigmake/: .gitrepo
swigmake/cmake/: SwigMatlab.cmake
swigmake/swig/python/: eigen.i
